@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2023 Universidade do Porto - Faculdade de Engenharia
+ * Copyright (c) 2004-2026 Universidade do Porto - Faculdade de Engenharia
  * Laboratório de Sistemas e Tecnologia Subaquática (LSTS)
  * All rights reserved.
  * Rua Dr. Roberto Frias s/n, sala I203, 4200-465 Porto, Portugal
@@ -36,6 +36,7 @@ import java.awt.Color;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.Collection;
 import java.util.Vector;
@@ -67,7 +68,7 @@ public class SunfishAssetProperties {
     
     public Collection<AssetDesc> fetchAssets() {
         try {
-            URL urlAssets = new URL(assets_url);
+            URL urlAssets = new URI(assets_url).toURL();
             File tmp = File.createTempFile("neptus", "assets");
             FileUtils.copyURLToFile(urlAssets, tmp);
             
